Don't optimize away necessary reflows.  Bug 388374, r+sr+a=dbaron